# cargo-clone-crate

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: lib.rs  main.rs
tests/: test_clone.rs
