[package]
name = "cargo-clone-crate"
version = "0.1.2"
authors = ["Eric Huss <eric@huss.org>"]
description = "Cargo subcommand to clone a repo from the registry."
homepage = "https://github.com/ehuss/cargo-clone-crate"
repository = "https://github.com/ehuss/cargo-clone-crate"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
license = "MIT"
edition = "2018"
include = ["/src"]

[dependencies]
anyhow = "1.0.17"
clap = "2.33.0"
env_logger = "0.7.1"
flate2 = "1.0.11"
log = "0.4.11"
regex = "1.3.1"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
semver = "0.10.0"
serde_json = "1.0.40"
tar = { version = "0.4.26", default-features = false }

[dev-dependencies]
tempfile = "3.1.0"

[lib]
name = "cargo_clone"
test = false

[[bin]]
name = "cargo-clone"
path = "src/main.rs"
test = false
