[package]
name = "cargo-clone-crate"
version = "0.1.6"
authors = ["Eric Huss <eric@huss.org>"]
description = "Cargo subcommand to clone a repo from the registry."
homepage = "https://github.com/ehuss/cargo-clone-crate"
repository = "https://github.com/ehuss/cargo-clone-crate"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
license = "MIT"
edition = "2018"
include = ["/src"]

[dependencies]
anyhow = "1.0.37"
clap = { version = "2.33.3", optional = true }
env_logger = { version = "0.8.2", optional = true }
flate2 = "1.0.19"
log = "0.4.11"
regex = "1.4.2"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
semver = "1"
serde_json = "1.0.61"
tar = { version = "0.4.30", default-features = false }

[dev-dependencies]
tempfile = "3.1.0"

[features]
default = ["clap", "env_logger"]

[lib]
name = "cargo_clone"
test = false

[[bin]]
name = "cargo-clone"
path = "src/main.rs"
test = false
required-features = ["default"]
